@@ -13,17 +13,17 @@ if(UserStudentID() && !$_REQUEST['modfunc'])
 {
 //FJ multiple school periods for a course period
 /*$courses_RET = DBGet(DBQuery("SELECT c.TITLE AS COURSE_TITLE,cp.TITLE,cp.COURSE_PERIOD_ID,cp.COURSE_ID,cp.TEACHER_ID AS STAFF_ID FROM SCHEDULE s,COURSE_PERIODS cp,COURSES c WHERE s.SYEAR='".UserSyear()."' AND cp.COURSE_PERIOD_ID=s.COURSE_PERIOD_ID AND s.MARKING_PERIOD_ID IN (".GetAllMP('QTR',UserMP()).") AND ('".DBDate()."'>=s.START_DATE AND (s.END_DATE IS NULL OR '".DBDate()."'<=s.END_DATE)) AND s.STUDENT_ID='".UserStudentID()."' AND cp.GRADE_SCALE_ID IS NOT NULL".(User('PROFILE')=='teacher'?' AND cp.TEACHER_ID=\''.User('STAFF_ID').'\'':'')." AND c.COURSE_ID=cp.COURSE_ID ORDER BY (SELECT SORT_ORDER FROM SCHOOL_PERIODS WHERE PERIOD_ID=cp.PERIOD_ID)"),array(),array('COURSE_PERIOD_ID'));*/
-$courses_RET = DBGet(DBQuery("SELECT c.TITLE AS COURSE_TITLE,cp.TITLE,cp.COURSE_PERIOD_ID,cp.COURSE_ID,cp.TEACHER_ID AS STAFF_ID 
-FROM SCHEDULE s,COURSE_PERIODS cp,COURSES c 
-WHERE s.SYEAR='".UserSyear()."' 
-AND cp.COURSE_PERIOD_ID=s.COURSE_PERIOD_ID 
-AND s.MARKING_PERIOD_ID IN (".GetAllMP('QTR',UserMP()).") 
-AND ('".DBDate()."'>=s.START_DATE 
-AND (s.END_DATE IS NULL OR '".DBDate()."'<=s.END_DATE)) 
-AND s.STUDENT_ID='".UserStudentID()."' 
+$courses_RET = DBGet(DBQuery("SELECT c.TITLE AS COURSE_TITLE,cp.TITLE,cp.COURSE_PERIOD_ID,cp.COURSE_ID,cp.TEACHER_ID AS STAFF_ID
+FROM SCHEDULE s,COURSE_PERIODS cp,COURSES c
+WHERE s.SYEAR='".UserSyear()."'
+AND cp.COURSE_PERIOD_ID=s.COURSE_PERIOD_ID
+AND s.MARKING_PERIOD_ID IN (".GetAllMP('QTR',UserMP()).")
+AND ('".DBDate()."'>=s.START_DATE
+AND (s.END_DATE IS NULL OR '".DBDate()."'<=s.END_DATE))
+AND s.STUDENT_ID='".UserStudentID()."'
 AND cp.GRADE_SCALE_ID IS NOT NULL".
-(User('PROFILE')=='teacher'?' AND cp.TEACHER_ID=\''.User('STAFF_ID').'\'':'')." 
-AND c.COURSE_ID=cp.COURSE_ID 
+(User('PROFILE')=='teacher'?' AND cp.TEACHER_ID=\''.User('STAFF_ID').'\'':'')."
+AND c.COURSE_ID=cp.COURSE_ID
 ORDER BY cp.SHORT_NAME, cp.TITLE"),array(),array('COURSE_PERIOD_ID'));
 //echo '<pre>'; var_dump($courses_RET); echo '</pre>';
 
@@ -36,11 +36,11 @@ if(!$_REQUEST['id'])
 	if($do_stats)
 //FJ add label on checkbox
 		DrawHeader('','<label>'.CheckBoxOnclick('do_stats').' '._('Include Anonymous Statistics').'</label>');
-		
+
 	$LO_columns = array('TITLE'=>_('Course Title'),'TEACHER'=>_('Teacher'),'UNGRADED'=>_('Ungraded'));
-	if ($program_config['GRADES_DOES_LETTER_PERCENT'][1]['VALUE']<0)
+	if ($program_config['GRADES_DOES_LETTER_PERCENT'][1]['VALUE']<=0)
 		$LO_columns['GRADE'] = _('Letter');
-	if ($program_config['GRADES_DOES_LETTER_PERCENT'][1]['VALUE']>0)
+	if ($program_config['GRADES_DOES_LETTER_PERCENT'][1]['VALUE']>=0)
 		$LO_columns['PERCENT'] = _('Percent');
 
 	if($do_stats && $_REQUEST['do_stats'])
@@ -70,8 +70,8 @@ if(!$_REQUEST['id'])
 					$programconfig[$staff_id] = true;
 			}
 
-			$sql = "SELECT s.STUDENT_ID,gt.ASSIGNMENT_TYPE_ID,sum(".db_case(array('gg.POINTS',"'-1'","'0'",'gg.POINTS')).") AS PARTIAL_POINTS,sum(".db_case(array('gg.POINTS',"'-1'","'0'",'ga.POINTS')).") AS PARTIAL_TOTAL,gt.FINAL_GRADE_PERCENT,sum(".db_case(array('gg.POINTS',"''","1","0")).") AS UNGRADED 
-			FROM STUDENTS s 
+			$sql = "SELECT s.STUDENT_ID,gt.ASSIGNMENT_TYPE_ID,sum(".db_case(array('gg.POINTS',"'-1'","'0'",'gg.POINTS')).") AS PARTIAL_POINTS,sum(".db_case(array('gg.POINTS',"'-1'","'0'",'ga.POINTS')).") AS PARTIAL_TOTAL,gt.FINAL_GRADE_PERCENT,sum(".db_case(array('gg.POINTS',"''","1","0")).") AS UNGRADED
+			FROM STUDENTS s
 			JOIN SCHEDULE ss ON (ss.STUDENT_ID=s.STUDENT_ID AND ss.SYEAR='".UserSyear()."'";
             if($_REQUEST['include_inactive']=='Y')
                 $sql .= " AND ss.START_DATE=(SELECT START_DATE FROM SCHEDULE WHERE STUDENT_ID=s.STUDENT_ID AND SYEAR=ss.SYEAR AND COURSE_PERIOD_ID=ss.COURSE_PERIOD_ID ORDER BY START_DATE DESC LIMIT 1)";
@@ -215,15 +215,15 @@ else
 		}
 
 		//FJ assigments appear after assigned date and not due date
-		$assignments_RET = DBGet(DBQuery("SELECT ga.ASSIGNMENT_ID,gg.POINTS,gg.COMMENT,ga.TITLE,ga.DESCRIPTION,ga.ASSIGNED_DATE,ga.DUE_DATE,ga.POINTS AS POINTS_POSSIBLE,at.TITLE AS CATEGORY 
-		FROM GRADEBOOK_ASSIGNMENTS ga 
+		$assignments_RET = DBGet(DBQuery("SELECT ga.ASSIGNMENT_ID,gg.POINTS,gg.COMMENT,ga.TITLE,ga.DESCRIPTION,ga.ASSIGNED_DATE,ga.DUE_DATE,ga.POINTS AS POINTS_POSSIBLE,at.TITLE AS CATEGORY
+		FROM GRADEBOOK_ASSIGNMENTS ga
 		LEFT OUTER JOIN GRADEBOOK_GRADES gg ON (gg.COURSE_PERIOD_ID='".$course['COURSE_PERIOD_ID']."' AND gg.ASSIGNMENT_ID=ga.ASSIGNMENT_ID AND gg.STUDENT_ID='".UserStudentID()."'),
-		GRADEBOOK_ASSIGNMENT_TYPES at 
-		WHERE (ga.COURSE_PERIOD_ID='".$course['COURSE_PERIOD_ID']."' OR ga.COURSE_ID='".$course['COURSE_ID']."' AND ga.STAFF_ID='".$staff_id."') 
-		AND ga.MARKING_PERIOD_ID='".UserMP()."' 
-		AND at.ASSIGNMENT_TYPE_ID=ga.ASSIGNMENT_TYPE_ID 
-		AND ((ga.ASSIGNED_DATE IS NULL OR CURRENT_DATE>=ga.ASSIGNED_DATE) AND (ga.DUE_DATE IS NULL OR CURRENT_DATE>=ga.DUE_DATE+".round($programconfig[$staff_id]['LATENCY']).") OR CURRENT_DATE>(SELECT END_DATE FROM SCHOOL_MARKING_PERIODS WHERE MARKING_PERIOD_ID=ga.MARKING_PERIOD_ID) OR gg.POINTS IS NOT NULL) 
-		AND (ga.POINTS!='0' OR gg.POINTS IS NOT NULL AND gg.POINTS!='-1') 
+		GRADEBOOK_ASSIGNMENT_TYPES at
+		WHERE (ga.COURSE_PERIOD_ID='".$course['COURSE_PERIOD_ID']."' OR ga.COURSE_ID='".$course['COURSE_ID']."' AND ga.STAFF_ID='".$staff_id."')
+		AND ga.MARKING_PERIOD_ID='".UserMP()."'
+		AND at.ASSIGNMENT_TYPE_ID=ga.ASSIGNMENT_TYPE_ID
+		AND ((ga.ASSIGNED_DATE IS NULL OR CURRENT_DATE>=ga.ASSIGNED_DATE) AND (ga.DUE_DATE IS NULL OR CURRENT_DATE>=ga.DUE_DATE+".round($programconfig[$staff_id]['LATENCY']).") OR CURRENT_DATE>(SELECT END_DATE FROM SCHOOL_MARKING_PERIODS WHERE MARKING_PERIOD_ID=ga.MARKING_PERIOD_ID) OR gg.POINTS IS NOT NULL)
+		AND (ga.POINTS!='0' OR gg.POINTS IS NOT NULL AND gg.POINTS!='-1')
 		ORDER BY ga.ASSIGNMENT_ID DESC"),array('TITLE'=>'_makeTipTitle'));
 		//echo '<pre>'; var_dump($assignments_RET); echo '</pre>';
 		if(count($assignments_RET))
@@ -235,26 +235,26 @@ else
 				max(".db_case(array('gg.POINTS',"'-1'",'0','gg.POINTS')).") AS MAX,
 				".db_case(array("sum(".db_case(array('gg.POINTS',"'-1'",'0','1')).")","'0'","'0'","sum(".db_case(array('gg.POINTS',"'-1'",'0','gg.POINTS')).") / sum(".db_case(array('gg.POINTS',"'-1'",'0','1')).")"))." AS AVG,
 				sum(CASE WHEN gg.POINTS!='-1' AND gg.POINTS<=g.POINTS AND gg.STUDENT_ID!=g.STUDENT_ID THEN 1 ELSE 0 END) AS LOWER,
-				sum(CASE WHEN gg.POINTS!='-1' AND gg.POINTS>g.POINTS THEN 1 ELSE 0 END) AS HIGHER 
-				FROM GRADEBOOK_GRADES gg,GRADEBOOK_ASSIGNMENTS ga 
+				sum(CASE WHEN gg.POINTS!='-1' AND gg.POINTS>g.POINTS THEN 1 ELSE 0 END) AS HIGHER
+				FROM GRADEBOOK_GRADES gg,GRADEBOOK_ASSIGNMENTS ga
 				LEFT OUTER JOIN GRADEBOOK_GRADES g ON (g.COURSE_PERIOD_ID='".$course['COURSE_PERIOD_ID']."' AND g.ASSIGNMENT_ID=ga.ASSIGNMENT_ID AND g.STUDENT_ID='".UserStudentID()."'),
-				GRADEBOOK_ASSIGNMENT_TYPES at 
-				WHERE (ga.COURSE_PERIOD_ID='".$course['COURSE_PERIOD_ID']."' OR ga.COURSE_ID='".$course['COURSE_ID']."' AND ga.STAFF_ID='".$staff_id."') 
-				AND ga.MARKING_PERIOD_ID='".UserMP()."' 
-				AND gg.ASSIGNMENT_ID=ga.ASSIGNMENT_ID 
-				AND at.ASSIGNMENT_TYPE_ID=ga.ASSIGNMENT_TYPE_ID 
-				AND ((ga.ASSIGNED_DATE IS NULL OR CURRENT_DATE>=ga.ASSIGNED_DATE) AND (ga.DUE_DATE IS NULL OR CURRENT_DATE>=ga.DUE_DATE+".round($programconfig[$staff_id]['LATENCY']).") OR CURRENT_DATE>(SELECT END_DATE FROM SCHOOL_MARKING_PERIODS WHERE MARKING_PERIOD_ID=ga.MARKING_PERIOD_ID) OR g.POINTS IS NOT NULL) 
-				AND ga.POINTS!='0' 
+				GRADEBOOK_ASSIGNMENT_TYPES at
+				WHERE (ga.COURSE_PERIOD_ID='".$course['COURSE_PERIOD_ID']."' OR ga.COURSE_ID='".$course['COURSE_ID']."' AND ga.STAFF_ID='".$staff_id."')
+				AND ga.MARKING_PERIOD_ID='".UserMP()."'
+				AND gg.ASSIGNMENT_ID=ga.ASSIGNMENT_ID
+				AND at.ASSIGNMENT_TYPE_ID=ga.ASSIGNMENT_TYPE_ID
+				AND ((ga.ASSIGNED_DATE IS NULL OR CURRENT_DATE>=ga.ASSIGNED_DATE) AND (ga.DUE_DATE IS NULL OR CURRENT_DATE>=ga.DUE_DATE+".round($programconfig[$staff_id]['LATENCY']).") OR CURRENT_DATE>(SELECT END_DATE FROM SCHOOL_MARKING_PERIODS WHERE MARKING_PERIOD_ID=ga.MARKING_PERIOD_ID) OR g.POINTS IS NOT NULL)
+				AND ga.POINTS!='0'
 				GROUP BY ga.ASSIGNMENT_ID"),array(),array('ASSIGNMENT_ID'));
 			//echo '<pre>'; var_dump($all_RET); echo '</pre>';
 
 			$LO_columns = array('TITLE'=>_('Title'),'CATEGORY'=>_('Category'),'POINTS'=>_('Points / Possible'));
-			if ($program_config['GRADES_DOES_LETTER_PERCENT'][1]['VALUE']>0)
+			if ($program_config['GRADES_DOES_LETTER_PERCENT'][1]['VALUE']>=0)
 				$LO_columns['PERCENT'] = _('Percent');
-			if ($program_config['GRADES_DOES_LETTER_PERCENT'][1]['VALUE']<0)
+			if ($program_config['GRADES_DOES_LETTER_PERCENT'][1]['VALUE']<=0)
 				if($programconfig[$staff_id]['LETTER_GRADE_ALL']!='Y')
 					$LO_columns['LETTER'] = _('Letter');
-				
+
 			$LO_columns += array('COMMENT'=>_('Comment'));
 			if($do_stats && $_REQUEST['do_stats'])
 				$LO_columns += array('BAR1'=>_('Grade Range'),'BAR2'=>_('Class Rank'));
@@ -364,22 +364,22 @@ function bargraph1($x,$lo=0,$avg=0,$hi=0,$max=0)
 				$w4 = round(100*($hi-$x)/$scale); $c4 = '#ff0000'; $legendc4 = $x;
 			}
 			$w3 = 100-$w1-$w2-$w4-$w5;
-			
+
 			$correction = 4;
 			if ($w1>0 && $w5>0)
 				$correction = 2;
-				
+
 			return '<div style="float:left; width:150px; border: #333 1px solid;">'.($w1>0?'<div style="width:'.($w1 - $correction).'%;float:left; background-color:#fff;">&nbsp;</div>':'').($w2>0?'<div style="width:'.$w2.'%; background-color:#00a000;float:left;">&nbsp;</div>':'').'<div style="width:2%; background-color:'.$c2.'; cursor:pointer;float:left;" title="'.$legendc2.'" >&nbsp;</div>'.($w3>0?'<div style="width:'.$w3.'%; background-color:#00a000;float:left;">&nbsp;</div>':'').'<div style="width:2%; background-color:'.$c4.'; cursor:pointer;float:left;" title="'.$legendc4.'">&nbsp;</div>'.($w4>0?'<div style="width:'.$w4.'%; background-color:#00a000;float:left;">&nbsp;</div>':'').($w5>0?'<div style="width:'.($w5 - $correction).'%;float:left;background-color:#fff;">&nbsp;</div>':'').'</div>';
 		}
 		else
 		{
 			$w2 = round(100*($avg-$lo)/$scale);
 			$w4 = round(100*($hi-$avg)/$scale);
-			
+
 			$correction = 2;
 			if ($w1>0 && $w5>0)
 				$correction = 1;
-				
+
 			return '<div style="float:left; width:150px; border: #333 1px solid;">'.($w1>0?'<div style="width:'.($w1 - $correction).'%;float:left; background-color:#fff;">&nbsp;</div>':'').($w2>0?'<div style="width:'.$w2.'%; background-color:#00a000;float:left;">&nbsp;</div>':'').'<div style="width:2%; background-color:#00a000;float:left;">&nbsp;</div>'.($w4>0?'<div style="width:'.$w4.'%; background-color:#00a000;float:left;">&nbsp;</div>':'').($w5>0?'<div style="width:'.($w5 - $correction).'%;float:left;background-color:#fff;">&nbsp;</div>':'').'</div>';
 		}
 	}
