@@ -14,6 +14,7 @@ Changes in 2.8.27
 - Fix Portal Polls display for Teachers & Parents in Portal.php
 - Fix more than 1 row returned SQL error in GPA widget: use REPORTING_GP_SCALE in Widgets.fnc.php
 - Fix menu_id's $id var for Menus tabs in DailyMenus.php
+- Show Letter & Percent grades (= 0 case) in StudentGrades.php
 
 Changes in 2.8.26
 -----------------
